apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: http
